<resources>
    <string name="app_name">Lancer Scout</string>
    <string name="crossed_auto_line">Crossed Auto Line</string>
    <string name="autonomous">Autonomous</string>
    <string name="right">Right</string>
    <string name="middle">Middle</string>
    <string name="left">Left</string>
    <string name="starting_configuration">Starting Configuration</string>
    <string name="red_alliance">Red Alliance</string>
    <string name="blue_alliance">Blue Alliance</string>
    <string name="alliance_color">Alliance Color</string>
    <string name="team_number">Team Number</string>
    <string name="current_match_number">Current Match Number</string>
    <string name="match_number">Match Number</string>
    <string name="cube_on_wrong_side_of_switch_scale">Cube on wrong side of switch/scale</string>
    <string name="teleop">TeleOp</string>
    <string name="send">Send</string>
    <string name="alliance_switch">Alliance Switch</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="robolancers_logo">Robolancers Logo</string>
    <string name="any_other_comments">Any other comments?</string>
    <string name="comments">Comments</string>
    <string name="robot_broke_down">Robot broke down</string>
    <string name="end_game">End Game</string>
    <string name="center_scale">Center Scale</string>
    <string name="opponent_switch">Opponent Switch</string>
    <string name="exchange">Exchange</string>
    <string name="match_history">Match history</string>
    <string name="pit_history">Pit History</string>
    <string name="save">Save</string>
    <string name="welcome_to_lancer_scout">Welcome to Lancer Scout!</string>
    <string name="match_scouting">Match Scouting</string>
    <string name="pit_scouting">Pit Scouting</string>
    <string name="drivetrain">Drivetrain</string>
    <string name="mechanisms">Mechanisms</string>
    <string name="cube_intake">Cube Intake</string>
    <string name="floor_intake">Floor Intake</string>
    <string name="portal_exchange_intake">Portal/Exchange Intake</string>
    <string name="both_intakes">Both Intakes</string>
    <string name="climb">Climb</string>
    <string name="solo_climber">Solo Climber</string>
    <string name="climber_with_ramp_for_one_robot">Climber with ramp for one robot</string>
    <string name="climber_with_ramp_for_two_robots">Climber with ramp for two robots</string>
    <string name="ramp_for_one_robot">Ramp for one robot</string>
    <string name="ramp_for_two_robots">Ramp for two robots</string>
    <string name="none">None</string>
    <string name="other">Other</string>
    <string name="robot_weight">Robot Weight</string>
    <string name="programming_language">Programming Language</string>
    <string name="comment">Comment</string>
    <string name="_0_0">0.0</string>

    <string-array name="ProgrammingLanguage">
        <item>Java</item>
        <item>C++</item>
        <item>Labview</item>
        <item>Other</item>
    </string-array>

    <string-array name="Drivetrains">
        <item>4WD</item>
        <item>6WD</item>
        <item>8WD</item>
        <item>Swerve</item>
        <item>Kiwi</item>
        <item>Custom</item>
    </string-array>

    <string-array name="AutoCubeAttempts">
        <item>No Cube Attempt</item>
        <item>Attempted Switch</item>
        <item>Attempted Scale</item>
        <item>Successful Switch</item>
        <item>Successful Scale</item>
    </string-array>

    <string-array name="EndGameAttempts">
        <item>Not parked on platform</item>
        <item>Parked on platform</item>
        <item>Attempted to hook onto bar</item>
        <item>Attempted to attach to a robot</item>
        <item>Attempted to carry a robot</item>
        <item>Hooked bar and attempted climb</item>
        <item>Successful climb on another robot</item>
        <item>Successful climb with another robot attached</item>
        <item>Successful climb on own</item>
    </string-array>
</resources>
