<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f5f8"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activities.match.MatchScoutingActivity"
    tools:ignore="NestedWeights"
    tools:targetApi="o">

    <android.support.v7.widget.Toolbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pit_scouting"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/teamNumberLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/team_number"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/pitTeamNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/team_number"
                    android:inputType="number"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/drivetrain"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/drivetrainSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:entries="@array/Drivetrains" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/mechanisms"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:paddingRight="20dp"
                    android:text="@string/climb"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <RadioGroup
                    android:id="@+id/climbingRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/level1Climb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/level_1" />

                    <RadioButton
                        android:id="@+id/level2Climb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/level_2" />

                    <RadioButton
                        android:id="@+id/level3Climb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/level_3" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="Hatch Intake"
                        android:textAlignment="center"
                        android:textSize="25sp" />

                    <RadioGroup
                        android:id="@+id/hatchIntakeRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0">

                        <RadioButton
                            android:id="@+id/hatchFloorIntakeRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/floor_intake" />

                        <RadioButton
                            android:id="@+id/hatchHumanIntakeRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/portal_exchange_intake" />

                        <RadioButton
                            android:id="@+id/hatchBothIntakeRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/both_intakes" />

                        <RadioButton
                            android:id="@+id/hatchNoneIntakeRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/none" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="Cargo Intake"
                        android:textAlignment="center"
                        android:textSize="25sp" />

                    <RadioGroup
                        android:id="@+id/cargoIntakeRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0">

                        <RadioButton
                            android:id="@+id/cargoFloorIntakeRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/floor_intake" />

                        <RadioButton
                            android:id="@+id/cargoHumanIntakeRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/portal_exchange_intake" />

                        <RadioButton
                            android:id="@+id/cargoBothIntakeRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/both_intakes" />

                        <RadioButton
                            android:id="@+id/cargoNoneIntakeRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/none" />
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="0"
                android:text="@string/other"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/robot_weight"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/robotWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_0_0"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/programming_language"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/programmingLanguageSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:entries="@array/ProgrammingLanguage" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/comment"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/pitScoutingComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/any_other_comments"
                android:inputType="text|textAutoCorrect|textMultiLine|textPersonName"
                android:textAlignment="textStart"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>